<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.hyperdondon</groupId>
    <artifactId>blissgemsremake</artifactId>
    <version>1</version>
    <packaging>jar</packaging>

    <name>blissgemsremake</name>

    <properties>
        <foundation.path>com.github.kangarko</foundation.path>
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.6.3</version>
                <configuration>
                    <doclint>none</doclint>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>

            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.2</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>


                            <createDependencyReducedPom>false</createDependencyReducedPom>

                            <!--Foundation Shade-->
                            <artifactSet>
                                <includes>
                                    <!-- Important: This will ensure only Foundation is shaded to your jar. If you have
                                         other dependencies that should be compiled, duplicate this line for each. -->
                                    <include>${foundation.path}:Foundation*</include>
                                </includes>
                            </artifactSet>
                            <relocations>
                                <!-- This moves Foundation into your own package in "lib" subpackage to prevent interference. -->
                                <relocation>
                                    <pattern>org.mineacademy.fo</pattern>
                                    <shadedPattern>${project.groupId}.${project.artifactId}.lib</shadedPattern>
                                </relocation>
                            </relocations>


                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>Maven Central</id>
            <url>https://repo1.maven.org/maven2/</url>
        </repository>

        <!-- Use this repository ONLY if you need snapshot builds -->
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>

        <repository>
            <id>spigotmc-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>

        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/groups/public/</url>
        </repository>

        <repository>
            <id>codemc-repo</id>
            <url>https://repo.codemc.io/repository/maven-public/</url>
            <layout>default</layout>
        </repository>

    </repositories>

    <dependencies>
        <!--<dependency>
            <groupId>org.mineacademy</groupId>
            <artifactId>Foundation</artifactId>
            <version>LATEST</version>
        </dependency>-->

        <dependency>
            <groupId>com.github.kangarko</groupId>
            <artifactId>Foundation</artifactId>
            <version>6.9.1</version>
        </dependency>


        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.18-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

    </dependencies>
</project>